Fixed alignment on Bootstrap container

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,6 +14,10 @@ body {
     margin: 0 auto 30px auto !important;
 }
 
+.container {
+  max-width: 100%;
+}
+
 h1 {
     font-family: 'Courgette', 'Courier New', cursive !important;
     text-align: center;
